Rename palo_alto module to panw
Use of the original module name, palo_alto, is discouraged. The
preferred short form is PANW (acronym for Palo Alto Networks).

This patch renames the module and updates all that is necessary,
including docs and field names, which now are nested under `panw`
instead of `palo_alto`.

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -40,7 +40,7 @@ grouped in the following categories:
 * <<exported-fields-netflow-module>>
 * <<exported-fields-nginx>>
 * <<exported-fields-osquery>>
-* <<exported-fields-palo_alto>>
+* <<exported-fields-panw>>
 * <<exported-fields-postgresql>>
 * <<exported-fields-process>>
 * <<exported-fields-rabbitmq>>
@@ -11828,17 +11828,17 @@ String representation of the collection time, as formatted by osquery.
 
 --
 
-[[exported-fields-palo_alto]]
-== palo_alto fields
+[[exported-fields-panw]]
+== panw fields
 
 Module for Palo Alto Networks (PAN-OS)
 
 
 
 [float]
-== palo_alto fields
+== panw fields
 
-Fields from the palo_alto logs.
+Fields from the panw module.
 
 
 
@@ -11849,7 +11849,7 @@ Fields for the Palo Alto Networks PAN-OS logs.
 
 
 
-*`palo_alto.pan_os.ruleset`*::
+*`panw.pan_os.ruleset`*::
 +
 --
 type: keyword
@@ -11866,7 +11866,7 @@ Fields to extend the top-level source object.
 
 
 
-*`palo_alto.pan_os.source.zone`*::
+*`panw.pan_os.source.zone`*::
 +
 --
 type: keyword
@@ -11876,7 +11876,7 @@ Source zone for this session.
 
 --
 
-*`palo_alto.pan_os.source.interface`*::
+*`panw.pan_os.source.interface`*::
 +
 --
 type: keyword
@@ -11893,7 +11893,7 @@ Post-NAT source address, if source NAT is performed.
 
 
 
-*`palo_alto.pan_os.source.nat.ip`*::
+*`panw.pan_os.source.nat.ip`*::
 +
 --
 type: ip
@@ -11903,7 +11903,7 @@ Post-NAT source IP.
 
 --
 
-*`palo_alto.pan_os.source.nat.port`*::
+*`panw.pan_os.source.nat.port`*::
 +
 --
 type: long
@@ -11920,7 +11920,7 @@ Fields to extend the top-level destination object.
 
 
 
-*`palo_alto.pan_os.destination.zone`*::
+*`panw.pan_os.destination.zone`*::
 +
 --
 type: keyword
@@ -11930,7 +11930,7 @@ Destination zone for this session.
 
 --
 
-*`palo_alto.pan_os.destination.interface`*::
+*`panw.pan_os.destination.interface`*::
 +
 --
 type: keyword
@@ -11947,7 +11947,7 @@ Post-NAT destination address, if destination NAT is performed.
 
 
 
-*`palo_alto.pan_os.destination.nat.ip`*::
+*`panw.pan_os.destination.nat.ip`*::
 +
 --
 type: ip
@@ -11957,7 +11957,7 @@ Post-NAT destination IP.
 
 --
 
-*`palo_alto.pan_os.destination.nat.port`*::
+*`panw.pan_os.destination.nat.port`*::
 +
 --
 type: long
@@ -11974,7 +11974,7 @@ Fields to extend the top-level network object.
 
 
 
-*`palo_alto.pan_os.network.pcap_id`*::
+*`panw.pan_os.network.pcap_id`*::
 +
 --
 type: keyword
@@ -11985,7 +11985,7 @@ Packet capture ID for a threat.
 --
 
 
-*`palo_alto.pan_os.network.nat.community_id`*::
+*`panw.pan_os.network.nat.community_id`*::
 +
 --
 type: keyword
@@ -12002,7 +12002,7 @@ Fields to extend the top-level file object.
 
 
 
-*`palo_alto.pan_os.file.hash`*::
+*`panw.pan_os.file.hash`*::
 +
 --
 type: keyword
@@ -12019,7 +12019,7 @@ Fields to extend the top-level url object.
 
 
 
-*`palo_alto.pan_os.url.category`*::
+*`panw.pan_os.url.category`*::
 +
 --
 type: keyword
@@ -12029,7 +12029,7 @@ For threat URLs, it's the URL category. For WildFire, the verdict on the file an
 
 --
 
-*`palo_alto.pan_os.flow_id`*::
+*`panw.pan_os.flow_id`*::
 +
 --
 type: keyword
@@ -12039,7 +12039,7 @@ Internal numeric identifier for each session.
 
 --
 
-*`palo_alto.pan_os.sequence_number`*::
+*`panw.pan_os.sequence_number`*::
 +
 --
 type: long
@@ -12049,7 +12049,7 @@ Log entry identifier that is incremented sequentially. Unique for each log type.
 
 --
 
-*`palo_alto.pan_os.threat.resource`*::
+*`panw.pan_os.threat.resource`*::
 +
 --
 type: keyword
@@ -12059,7 +12059,7 @@ URL or file name for a threat.
 
 --
 
-*`palo_alto.pan_os.threat.id`*::
+*`panw.pan_os.threat.id`*::
 +
 --
 type: keyword
@@ -12069,7 +12069,7 @@ Palo Alto Networks identifier for the threat.
 
 --
 
-*`palo_alto.pan_os.threat.name`*::
+*`panw.pan_os.threat.name`*::
 +
 --
 type: keyword
