--- a/filebeat/docs/modules/panw.asciidoc
+++ b/filebeat/docs/modules/panw.asciidoc
@@ -2,10 +2,10 @@
 This file is generated! See scripts/docs_collector.py
 ////
 
-[[filebeat-module-palo_alto]]
+[[filebeat-module-panw]]
 [role="xpack"]
 
-:modulename: palo_alto
+:modulename: panw
 :has-dashboards: true
 
 == Palo Alto Networks module
@@ -29,7 +29,7 @@ include::../include/running-modules.asciidoc[]
 === ECS field mappings
 
 These are the PAN-OS to ECS field mappings as well as those fields still not
-in ECS that are added under the `palo_alto` prefix:
+in ECS that are added under the `panw.pan_os` prefix:
 
 .Traffic log mappings
 [options="header"]
@@ -42,21 +42,21 @@ in ECS that are added under the `palo_alto` prefix:
 | Generated Time | `@timestamp` |
 | Source IP | client.ip source.ip |
 | Destination IP | server.ip destination.ip |
-| NAT Source IP |  | palo_alto.source.nat.ip
-| NAT Destination IP |  | palo_alto.destination.nat.ip
-| Rule Name |  | palo_alto.ruleset
+| NAT Source IP |  | panw.pan_os.source.nat.ip
+| NAT Destination IP |  | panw.pan_os.destination.nat.ip
+| Rule Name |  | panw.pan_os.ruleset
 | Source User | client.user.name source.user.name |
 | Destination User | server.user.name destination.user.name |
 | Application | network.application |
-| Source Zone |  | palo_alto.source.zone
-| Destination Zone |  | palo_alto.destination.zone
-| Ingress Interface |  | palo_alto.source.interface
-| Egress Interface |  | palo_alto.destination.interface
-| Session ID |  | palo_alto.flow_id
+| Source Zone |  | panw.pan_os.source.zone
+| Destination Zone |  | panw.pan_os.destination.zone
+| Ingress Interface |  | panw.pan_os.source.interface
+| Egress Interface |  | panw.pan_os.destination.interface
+| Session ID |  | panw.pan_os.flow_id
 | Source Port | client.port source.port |
 | Destination Port | destination.port server.port |
-| NAT Source Port |  | palo_alto.source.nat.port
-| NAT Destination Port |  | palo_alto.destination.nat.port
+| NAT Source Port |  | panw.pan_os.source.nat.port
+| NAT Destination Port |  | panw.pan_os.destination.nat.port
 | Flags | labels |
 | Protocol | network.transport |
 | Action | event.outcome |
@@ -66,8 +66,8 @@ in ECS that are added under the `palo_alto` prefix:
 | Packets | network.packets |
 | Start Time | event.start |
 | Elapsed Time | event.duration |
-| Category |  | palo_alto.url.category
-| Sequence Number |  | palo_alto.sequence_number
+| Category |  | panw.pan_os.url.category
+| Sequence Number |  | panw.pan_os.sequence_number
 | Packets Sent | server.packets destination.packets |
 | Packets Received | client.packets source.packets |
 | Device Name | observer.hostname |
@@ -84,39 +84,39 @@ in ECS that are added under the `palo_alto` prefix:
 | Generated Time | `@timestamp` |
 | Source IP | client.ip source.ip |
 | Destination IP | server.ip destination.ip |
-| NAT Source IP |  | palo_alto.source.nat.ip
-| NAT Destination IP |  | palo_alto.destination.nat.ip
-| Rule Name |  | palo_alto.ruleset
+| NAT Source IP |  | panw.pan_os.source.nat.ip
+| NAT Destination IP |  | panw.pan_os.destination.nat.ip
+| Rule Name |  | panw.pan_os.ruleset
 | Source User | client.user.name source.user.name |
 | Destination User | server.user.name destination.user.name |
 | Application | network.application |
-| Source Zone |  | palo_alto.source.zone
-| Destination Zone |  | palo_alto.destination.zone
-| Ingress Interface |  | palo_alto.source.interface
-| Egress Interface |  | palo_alto.destination.interface
-| Session ID |  | palo_alto.flow_id
+| Source Zone |  | panw.pan_os.source.zone
+| Destination Zone |  | panw.pan_os.destination.zone
+| Ingress Interface |  | panw.pan_os.source.interface
+| Egress Interface |  | panw.pan_os.destination.interface
+| Session ID |  | panw.pan_os.flow_id
 | Source Port | client.port source.port |
 | Destination Port | destination.port server.port |
-| NAT Source Port |  | palo_alto.source.nat.port
-| NAT Destination Port |  | palo_alto.destination.nat.port
+| NAT Source Port |  | panw.pan_os.source.nat.port
+| NAT Destination Port |  | panw.pan_os.destination.nat.port
 | Flags | labels |
 | Protocol | network.transport |
 | Action | event.outcome |
-| Miscellaneous | url.original | palo_alto.threat_file_or_url
-| Threat ID |  | palo_alto.threat_id
-| Category |  | palo_alto.url.category
+| Miscellaneous | url.original | panw.pan_os.threat.resource
+| Threat ID |  | panw.pan_os.threat.id
+| Category |  | panw.pan_os.url.category
 | Severity | log.level |
 | Direction | network.direction |
 | Source Location | source.geo.country_iso_code |
 | Destination Location | destination.geo.country_iso_code |
-| PCAP_id |  | palo_alto.network.pcap_id
-| Filedigest |  | palo_alto.file.hash
+| PCAP_id |  | panw.pan_os.network.pcap_id
+| Filedigest |  | panw.pan_os.file.hash
 | User Agent | user_agent.original |
 | File Type | file.type |
 | X-Forwarded-For | network.forwarded_ip |
 | Referer | http.request.referer |
 | Sender | source.user.email |
-| Subject |  | palo_alto.subject
+| Subject |  | panw.pan_os.subject
 | Recipient | destination.user.email |
 | Device Name | observer.hostname |
 |==============
@@ -127,10 +127,10 @@ in ECS that are added under the `palo_alto` prefix:
 This module comes with two sample dashboards:
 
 [role="screenshot"]
-image::./images/filebeat-palo-alto-traffic.png[]
+image::./images/filebeat-panw-traffic.png[]
 
 [role="screenshot"]
-image::./images/filebeat-palo-alto-threat.png[]
+image::./images/filebeat-panw-threat.png[]
 
 include::../include/configuring-intro.asciidoc[]
 
@@ -139,7 +139,7 @@ it can also be configured to read logs from a file. See the following example.
 
 ["source","yaml",subs="attributes"]
 -----
-- module: palo_alto
+- module: panw
   pan_os:
     enabled: true
     var.paths: ["/var/log/pan-os.log"]
@@ -186,5 +186,5 @@ NOTE: Ports below 1024 require {beatname_uc} to run as root.
 === Fields
 
 For a description of each field in the module, see the
-<<exported-fields-palo_alto,exported fields>> section.
+<<exported-fields-panw,exported fields>> section.
 
