--- a/CHANGELOG-developer.asciidoc
+++ b/CHANGELOG-developer.asciidoc
@@ -12,6 +12,12 @@ other Beats should be migrated.
 
 Note: This changelog was only started after the 6.3 release.
 
+=== Beats version 7.1.1
+https://github.com/elastic/beats/compare/v7.1.0..v7.1.1[Check the HEAD diff]
+
+=== Beats version 7.1.0
+https://github.com/elastic/beats/compare/v7.0.0..v7.1.0[Check the HEAD diff]
+
 === Beats version 7.0.1
 https://github.com/elastic/beats/compare/v7.0.0..v7.0.1[Check the HEAD diff]
 
