--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -14,9 +14,9 @@ Note: This changelog documents the current changes which are not yet present in
 an actual release.
 
 === Beats version HEAD
-https://github.com/elastic/beats/compare/v7.1.0..master[Check the HEAD diff]
+https://github.com/elastic/beats/compare/v7.1.1..7.0[Check the HEAD diff]
 
-The list below covers the major changes between 7.1.0 and master only.
+The list below covers the major changes between 7.1.1 and 7.0 only.
 
 ==== Breaking changes
 
