--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -1608,7 +1608,7 @@ Version of the agent.
 == client fields
 
 A client is defined as the initiator of a network connection for events regarding sessions, connections, or bidirectional flow records.
-For TCP events, the client is the initiator of the TCP connection that sends the SYN packet(s). For other protocols, the client is generally the initiator or requestor in the network transaction. Some systems use the term "originator" to refer the client in TCP connections. The client fields describe details about the system acting as the client in the network event. Client fields are usually populated in conjunction with server fields.  Client fields are generally not populated for packet-level events.
+For TCP events, the client is the initiator of the TCP connection that sends the SYN packet(s). For other protocols, the client is generally the initiator or requestor in the network transaction. Some systems use the term "originator" to refer the client in TCP connections. The client fields describe details about the system acting as the client in the network event. Client fields are usually populated in conjunction with server fields. Client fields are generally not populated for packet-level events.
 Client / server representations can add semantic context to an exchange, which is helpful to visualize the data in certain situations. If your context falls in that category, you should still ensure that source and destination are filled appropriately.
 
 
@@ -1768,6 +1768,8 @@ Packets sent from the client to the server.
 +
 --
 type: long
+
+format: string
 
 Port of the client.
 
@@ -2150,6 +2152,8 @@ Packets sent from the destination to the source.
 --
 type: long
 
+format: string
+
 Port of the destination.
 
 --
@@ -2447,6 +2451,8 @@ This is mainly useful if you use more than one system that assigns risk scores, 
 type: long
 
 example: 7
+
+format: string
 
 Severity describes the original severity of the event. What the different severity values mean can very different between use cases. It's up to the implementer to make sure severities are consistent across events.
 
@@ -3138,8 +3144,6 @@ type: long
 
 example: 1437
 
-format: bytes
-
 Total size in bytes of the response (body and headers).
 
 --
@@ -3150,6 +3154,8 @@ Total size in bytes of the response (body and headers).
 type: long
 
 example: 404
+
+format: string
 
 HTTP response status code.
 
@@ -3716,6 +3722,10 @@ Sometimes called program name or similar.
 --
 type: long
 
+example: 4242
+
+format: string
+
 Process id.
 
 --
@@ -3725,7 +3735,11 @@ Process id.
 --
 type: long
 
-Process parent id.
+example: 4241
+
+format: string
+
+Parent process' pid.
 
 --
 
@@ -3746,6 +3760,8 @@ The time the process started.
 type: long
 
 example: 4242
+
+format: string
 
 Thread ID.
 
@@ -3953,6 +3969,8 @@ Packets sent from the server to the client.
 +
 --
 type: long
+
+format: string
 
 Port of the server.
 
@@ -4270,6 +4288,8 @@ Packets sent from the source to the destination.
 --
 type: long
 
+format: string
+
 Port of the source.
 
 --
@@ -4418,6 +4438,8 @@ Path of the request, such as "/search".
 type: long
 
 example: 443
+
+format: string
 
 Port of the request, such as 443.
 
