--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -11843,13 +11843,13 @@ Fields from the panw module.
 
 
 [float]
-== pan_os fields
+== panos fields
 
 Fields for the Palo Alto Networks PAN-OS logs.
 
 
 
-*`panw.pan_os.ruleset`*::
+*`panw.panos.ruleset`*::
 +
 --
 type: keyword
@@ -11866,7 +11866,7 @@ Fields to extend the top-level source object.
 
 
 
-*`panw.pan_os.source.zone`*::
+*`panw.panos.source.zone`*::
 +
 --
 type: keyword
@@ -11876,7 +11876,7 @@ Source zone for this session.
 
 --
 
-*`panw.pan_os.source.interface`*::
+*`panw.panos.source.interface`*::
 +
 --
 type: keyword
@@ -11893,7 +11893,7 @@ Post-NAT source address, if source NAT is performed.
 
 
 
-*`panw.pan_os.source.nat.ip`*::
+*`panw.panos.source.nat.ip`*::
 +
 --
 type: ip
@@ -11903,7 +11903,7 @@ Post-NAT source IP.
 
 --
 
-*`panw.pan_os.source.nat.port`*::
+*`panw.panos.source.nat.port`*::
 +
 --
 type: long
@@ -11920,7 +11920,7 @@ Fields to extend the top-level destination object.
 
 
 
-*`panw.pan_os.destination.zone`*::
+*`panw.panos.destination.zone`*::
 +
 --
 type: keyword
@@ -11930,7 +11930,7 @@ Destination zone for this session.
 
 --
 
-*`panw.pan_os.destination.interface`*::
+*`panw.panos.destination.interface`*::
 +
 --
 type: keyword
@@ -11947,7 +11947,7 @@ Post-NAT destination address, if destination NAT is performed.
 
 
 
-*`panw.pan_os.destination.nat.ip`*::
+*`panw.panos.destination.nat.ip`*::
 +
 --
 type: ip
@@ -11957,7 +11957,7 @@ Post-NAT destination IP.
 
 --
 
-*`panw.pan_os.destination.nat.port`*::
+*`panw.panos.destination.nat.port`*::
 +
 --
 type: long
@@ -11974,7 +11974,7 @@ Fields to extend the top-level network object.
 
 
 
-*`panw.pan_os.network.pcap_id`*::
+*`panw.panos.network.pcap_id`*::
 +
 --
 type: keyword
@@ -11985,7 +11985,7 @@ Packet capture ID for a threat.
 --
 
 
-*`panw.pan_os.network.nat.community_id`*::
+*`panw.panos.network.nat.community_id`*::
 +
 --
 type: keyword
@@ -12002,7 +12002,7 @@ Fields to extend the top-level file object.
 
 
 
-*`panw.pan_os.file.hash`*::
+*`panw.panos.file.hash`*::
 +
 --
 type: keyword
@@ -12019,7 +12019,7 @@ Fields to extend the top-level url object.
 
 
 
-*`panw.pan_os.url.category`*::
+*`panw.panos.url.category`*::
 +
 --
 type: keyword
@@ -12029,7 +12029,7 @@ For threat URLs, it's the URL category. For WildFire, the verdict on the file an
 
 --
 
-*`panw.pan_os.flow_id`*::
+*`panw.panos.flow_id`*::
 +
 --
 type: keyword
@@ -12039,7 +12039,7 @@ Internal numeric identifier for each session.
 
 --
 
-*`panw.pan_os.sequence_number`*::
+*`panw.panos.sequence_number`*::
 +
 --
 type: long
@@ -12049,7 +12049,7 @@ Log entry identifier that is incremented sequentially. Unique for each log type.
 
 --
 
-*`panw.pan_os.threat.resource`*::
+*`panw.panos.threat.resource`*::
 +
 --
 type: keyword
@@ -12059,7 +12059,7 @@ URL or file name for a threat.
 
 --
 
-*`panw.pan_os.threat.id`*::
+*`panw.panos.threat.id`*::
 +
 --
 type: keyword
@@ -12069,7 +12069,7 @@ Palo Alto Networks identifier for the threat.
 
 --
 
-*`panw.pan_os.threat.name`*::
+*`panw.panos.threat.name`*::
 +
 --
 type: keyword
