Simplify Beats security docs (#11329)
* Simplify Beats security docs

* Add changes from review

--- a/libbeat/docs/monitoring/monitoring-beats.asciidoc
+++ b/libbeat/docs/monitoring/monitoring-beats.asciidoc
@@ -39,7 +39,11 @@ configured {es} output, specify the following minimal configuration:
 --
 [source, yml]
 --------------------
-xpack.monitoring.enabled: true
+xpack.monitoring:
+  enabled: true
+  elasticsearch:
+    username: {beat_monitoring_user}
+    password: somepassword
 --------------------
 
 If you configured a different output, such as {ls}, you must specify additional
