Rename palo_alto module to panw (#12269)
Use of the original module name, palo_alto, is discouraged. The
preferred short form is PANW (acronym for Palo Alto Networks).

This patch renames the module and updates all that is necessary,
including docs and field names, which now are nested under `panw`
instead of `palo_alto`.

The fileset is also renamed, from `pan_os` to `panos`.

(cherry picked from commit 44cfe34be110c6efd5f8d58dd5231e5c1de7be97)

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -40,7 +40,7 @@ grouped in the following categories:
 * <<exported-fields-netflow-module>>
 * <<exported-fields-nginx>>
 * <<exported-fields-osquery>>
-* <<exported-fields-palo_alto>>
+* <<exported-fields-panw>>
 * <<exported-fields-postgresql>>
 * <<exported-fields-process>>
 * <<exported-fields-rabbitmq>>
@@ -11826,28 +11826,28 @@ String representation of the collection time, as formatted by osquery.
 
 --
 
-[[exported-fields-palo_alto]]
-== palo_alto fields
+[[exported-fields-panw]]
+== panw fields
 
 Module for Palo Alto Networks (PAN-OS)
 
 
 
 [float]
-== palo_alto fields
+== panw fields
 
-Fields from the palo_alto logs.
+Fields from the panw module.
 
 
 
 [float]
-== pan_os fields
+== panos fields
 
 Fields for the Palo Alto Networks PAN-OS logs.
 
 
 
-*`palo_alto.pan_os.ruleset`*::
+*`panw.panos.ruleset`*::
 +
 --
 type: keyword
@@ -11864,7 +11864,7 @@ Fields to extend the top-level source object.
 
 
 
-*`palo_alto.pan_os.source.zone`*::
+*`panw.panos.source.zone`*::
 +
 --
 type: keyword
@@ -11874,7 +11874,7 @@ Source zone for this session.
 
 --
 
-*`palo_alto.pan_os.source.interface`*::
+*`panw.panos.source.interface`*::
 +
 --
 type: keyword
@@ -11891,7 +11891,7 @@ Post-NAT source address, if source NAT is performed.
 
 
 
-*`palo_alto.pan_os.source.nat.ip`*::
+*`panw.panos.source.nat.ip`*::
 +
 --
 type: ip
@@ -11901,7 +11901,7 @@ Post-NAT source IP.
 
 --
 
-*`palo_alto.pan_os.source.nat.port`*::
+*`panw.panos.source.nat.port`*::
 +
 --
 type: long
@@ -11918,7 +11918,7 @@ Fields to extend the top-level destination object.
 
 
 
-*`palo_alto.pan_os.destination.zone`*::
+*`panw.panos.destination.zone`*::
 +
 --
 type: keyword
@@ -11928,7 +11928,7 @@ Destination zone for this session.
 
 --
 
-*`palo_alto.pan_os.destination.interface`*::
+*`panw.panos.destination.interface`*::
 +
 --
 type: keyword
@@ -11945,7 +11945,7 @@ Post-NAT destination address, if destination NAT is performed.
 
 
 
-*`palo_alto.pan_os.destination.nat.ip`*::
+*`panw.panos.destination.nat.ip`*::
 +
 --
 type: ip
@@ -11955,7 +11955,7 @@ Post-NAT destination IP.
 
 --
 
-*`palo_alto.pan_os.destination.nat.port`*::
+*`panw.panos.destination.nat.port`*::
 +
 --
 type: long
@@ -11972,7 +11972,7 @@ Fields to extend the top-level network object.
 
 
 
-*`palo_alto.pan_os.network.pcap_id`*::
+*`panw.panos.network.pcap_id`*::
 +
 --
 type: keyword
@@ -11983,7 +11983,7 @@ Packet capture ID for a threat.
 --
 
 
-*`palo_alto.pan_os.network.nat.community_id`*::
+*`panw.panos.network.nat.community_id`*::
 +
 --
 type: keyword
@@ -12000,7 +12000,7 @@ Fields to extend the top-level file object.
 
 
 
-*`palo_alto.pan_os.file.hash`*::
+*`panw.panos.file.hash`*::
 +
 --
 type: keyword
@@ -12017,7 +12017,7 @@ Fields to extend the top-level url object.
 
 
 
-*`palo_alto.pan_os.url.category`*::
+*`panw.panos.url.category`*::
 +
 --
 type: keyword
@@ -12027,7 +12027,7 @@ For threat URLs, it's the URL category. For WildFire, the verdict on the file an
 
 --
 
-*`palo_alto.pan_os.flow_id`*::
+*`panw.panos.flow_id`*::
 +
 --
 type: keyword
@@ -12037,7 +12037,7 @@ Internal numeric identifier for each session.
 
 --
 
-*`palo_alto.pan_os.sequence_number`*::
+*`panw.panos.sequence_number`*::
 +
 --
 type: long
@@ -12047,7 +12047,7 @@ Log entry identifier that is incremented sequentially. Unique for each log type.
 
 --
 
-*`palo_alto.pan_os.threat.resource`*::
+*`panw.panos.threat.resource`*::
 +
 --
 type: keyword
@@ -12057,7 +12057,7 @@ URL or file name for a threat.
 
 --
 
-*`palo_alto.pan_os.threat.id`*::
+*`panw.panos.threat.id`*::
 +
 --
 type: keyword
@@ -12067,7 +12067,7 @@ Palo Alto Networks identifier for the threat.
 
 --
 
-*`palo_alto.pan_os.threat.name`*::
+*`panw.panos.threat.name`*::
 +
 --
 type: keyword
