Update type of origin field

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -7680,7 +7680,7 @@ Common log fields
 *`mssql.log.origin`*::
 +
 --
-type: text
+type: keyword
 
 Origin of the message, usually the server but it can also be a recovery process
 
