[7.1] Backport: Simplify Beats security docs (#11329) (#12287)
* Simplify Beats security docs (#11329)

* Simplify Beats security docs

* Add changes from review

* Apply suggestions from code review

Add attribute substitution to resolve attribute.

* Remove to-do.

--- a/libbeat/docs/monitoring/monitoring-beats.asciidoc
+++ b/libbeat/docs/monitoring/monitoring-beats.asciidoc
@@ -37,9 +37,13 @@ information, see
 configured {es} output, specify the following minimal configuration:
 +
 --
-[source, yml]
+["source","yml",subs="attributes"]
 --------------------
-xpack.monitoring.enabled: true
+xpack.monitoring:
+  enabled: true
+  elasticsearch:
+    username: {beat_monitoring_user}
+    password: somepassword
 --------------------
 
 If you configured a different output, such as {ls}, you must specify additional
